istio-workshop-part2/faultinjection/timeout/destination-rule-recommendation.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  subsets:
    - name: version-v2
      labels:
        version: v2
---
