istio-workshop-part2/faultinjection/timeout/virtual-service-recommendation-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v2  
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 5s
